[package]
name = "mock_three_ds_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
env_logger = "0.10"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
async-trait = "0.1"
thiserror = "1.0"
